# openmc_cell_segmenter

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci_with_install.yml  python-publish.yml
example/: segment_spheres_with_zplane_and_zcylinder.py  segment_text.py
examples/: segment_rectange_with_zplane_xplane_yplane.py  segment_spheres_with_zplane_and_zcylinder.py  segment_text.py
src/openmc_cell_segmenter/: core.py  two.py  two_modular.py
tests/: test_segment.py
